# du

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml  test_clang_format.yml
src/: .srcfiles.yaml  mainapp.cpp  pch.cpp  pch.h  strings.cpp  strings.h
